tests/ui/coloring/host_in_device.rx
//@ spec: RXS-0066
fn host_only() {}

device fn d() {
    host_only(); //~ ERROR RX3001
}

fn main() {}
